fix: changed the color of the active Link in the navbar to be more readable.

--- a/frontend/src/styles/_mixins.scss
+++ b/frontend/src/styles/_mixins.scss
@@ -313,7 +313,7 @@
   }
 
   &.active {
-    color: $accent !important;
+    color: $accent-dark !important;
     background-color: rgba(0, 0, 0, 0.08) !important;
     transform: scale(1.05) !important;
     font-weight: 600 !important;
